Np 49279 migrate unconfirmed series for degrees (#2247)
* work in progress

* migrating unconfirmed series for degrees